OOP/Solution/OOPUnitCore.java : Almost done
    - missing the backup part

Signed-off-by: Yoni Bettan <ybettan@redhat.com>